ligolang/src/test/contracts/positive/self_address_in_lambda.mligo
let main (_, _ : unit * (unit -> address)) : operation list * (unit -> address) =
  (([] : operation list), (fun (_ : unit) -> Tezos.self_address))
